--- a/landing_page/assets/css/style.css
+++ b/landing_page/assets/css/style.css
@@ -1,145 +1,124 @@
-*{
-    margin:0;
-    padding:0;
-    border:0;
-    list-style:none;
-    box-sizing:border-box
-  }
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  list-style: none;
+  box-sizing: border-box;
+}
 
 .navbar {
-    border-radius: 0 !important;
-    border: none;
+  margin-bottom: 0px;
 }
 
-.navbar-brand img {
-    margin-left: 50px;
+.text_nav {
+  color: #000000;
 }
 
-.container-fluid {
-  display: flex;
-}
-
-.navbar-text {
-    margin-left: 685px;
-}
-  
 .img_back {
-    background-image: url("../img_topo.jpg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    height: 189vh;
-    margin-top: -20px;
-    max-width: 100%;
+  background-image: url("../img_topo.jpg");
+  background-size: cover;
 }
-
 
 .fundo_black {
-    background-image: url("../bg.jpg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    max-width: 100%;
-    height:189vh;
-    margin-top: 400px;
+  background-image: url("../bg.jpg");
+  background-size: cover;
 }
-
+.lead {
+  margin-bottom: 0px;
+  padding: 200px 0;
+}
 .lead p {
-    margin-left: 50px;
-    color: white;
+  color: white;
 }
 
 .text_box {
-    margin-top: 19px;
-    font-size: 64px;
+  margin-top: 19px;
+  font-size: 64px;
 }
 
-.number p{
-    font-size: 14px;
-    margin-top: 20px;
-    padding-top: 179px;
-    margin-left: 50px;
+.number p {
+  font-size: 14px;
 }
 
 .maecenas {
-    width: 320px;
-    background-color:rgb(255,208,0); 
-    color: white;
-    font-size: 60px;
-    margin-left: 50px;
-   }
+  max-width: 320px;
+  background-color: rgb(255, 208, 0);
+  color: white;
+  font-size: 60px;
+}
 
 .maecenas h1 {
-    font-size: 60px;
+  font-size: 5rem;
 }
 
 .nulla {
-    width: 420px;
-    margin-top: -10px;
-    background-color:rgb(255,208,0); 
-    color: white;
-    margin-left: 50px;
+  max-width: 420px;
+  margin-top: -10px;
+  background-color: rgb(255, 208, 0);
+  color: white;
 }
 
 .nulla h1 {
-    font-size: 64px;
-    padding-left: 50px;
+  font-size: 5rem;
+  padding-left: 50px;
 }
 
-.nulla_text p{
-    font-size: 10px;
+.nulla_text p {
+  font-size: 10px;
 }
 
 .panel {
-    width: 972px;
-    margin-left: 200px;
-    padding: 21px;
-    margin-top: -1275px;
-    border: none;
+  padding: 21px;
+  margin-left: 15%;
+  position: relative;
+  top: -60px;
+
+  margin-right: 15%;
+  border: none;
 }
 
 .row {
-    color: #ffffff;
-    margin-top: 50px;
+  color: #ffffff;
+  margin: 25px 0;
 }
 
 .row h2 {
-    color: rgb(251, 255, 0);
-    margin-top: 50px;
+  color: rgb(251, 255, 0);
+  margin-top: 10px;
 }
 
 .row_black {
-    margin-left: 50px;
+  padding-bottom: 50px;
 }
-
 .row_black h2 {
-    margin-left: 15px;
-    margin-top: 40px;
+  margin-left: 15px;
+  margin-top: -21px;
 }
 
 .row h4 {
-    line-height: 30px;
+  line-height: 30px;
+}
+
+
+.text_one {
+  margin-top: 40px;
 }
 
 .text_row {
-    margin-left: 310px;
-}
-
-.text_one {
-    margin-top: 40px;
+  float: right;
 }
 
 .thumbnail {
-    border-radius: 20px;
-    width: 250px;
-    margin-left: 100px;
-    margin-top: -40px;
-    box-shadow: 2px 1px 12px 2px #808080;
+  border-radius: 20px;
+  max-width: 300px;
+  margin: 45px auto;
+  box-shadow: 2px 1px 12px 2px #808080;
 }
 
-
-footer {
-   margin-top: -30px;
+.jumbotron {
+    margin-bottom: 0px;
 }
-
 footer p {
-    font-size: 15px;
+  font-size: 15px;
+  margin-bottom: 0px;
 }
